# iperf3KMP

./: AGENTS.md  AI_ASSISTED_DEVELOPMENT_LIMITS.md  CLAUDE.md  IPERF3_NATIVE_INTEGRATION.md  LMSTUDIO_MCP_CASE_STUDY.md  NATIVE_FORMATTING_JUSTIFICATION.md  PRINTF_FORMATTING_CASE_STUDY.md  TODO.md  build.gradle.kts  continue.txt  gradle.properties  session-ses_0b5b.md  settings.gradle.kts
androidApp/: build.gradle.kts
androidApp/src/main/kotlin/edu/bu/cs683_jabramson_project/iperf3_network_tester/: MainActivity.kt
androidApp/src/main/kotlin/edu/bu/cs683_jabramson_project/iperf3_network_tester_kmp/: MainActivity.kt
androidApp/src/main/res/values/: ic_launcher_background.xml  strings.xml
desktopApp/: build.gradle.kts
desktopApp/src/main/kotlin/edu/bu/cs683_jabramson_project/iperf3_network_tester/: main.kt
desktopApp/src/main/kotlin/edu/bu/cs683_jabramson_project/iperf3_network_tester_kmp/: main.kt
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/iosApp/Assets.xcassets/AppIcon.appiconset/: Contents.json
native/: native_format.h  native_format_jni.c
nativeformat/: build.gradle.kts
nativeformat/src/main/cpp/: CMakeLists.txt
shared/: build.gradle.kts
shared/src/androidHostTest/kotlin/edu/bu/cs683_jabramson_project/iperf3_network_tester/: SharedLogicAndroidHostTest.kt
shared/src/commonMain/composeResources/values/: strings.xml
shared/src/commonMain/kotlin/edu/bu/cs683_jabramson_project/iperf3_network_tester/: App.kt  (+3 more)
shared/src/nativeInterop/cinterop/: native_format.def
(+95 files in other folders)
